--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -111,7 +111,14 @@
 			"error",
 			1
 		],
+		"callback-return": "error",
+		"consistent-return": "error",
+		"no-useless-return": "error",
+		"array-callback-return": "error",
 		"getter-return": [
+			"error"
+		],
+		"@typescript-eslint/explicit-module-boundary-types": [
 			"error"
 		],
 		"@typescript-eslint/explicit-member-accessibility": [
